Thu Aug 21 19:37:40 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/Makefile.am: restore revision number for development builds

Thu Aug 21 19:08:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - <various>/Makefile.am: libtool fixes (patch provided by Stanislav
   Brabec, from openSUSE)

Fri Aug 15 23:48:38 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: Increase send retries to 10 (as needed by some
   protocol 2001 units)

Thu Aug  7 09:39:57 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite.[ch]: significantly improved failure mode handling and
   also basic checks of data validity (from Nicholas J. Kain)

Mon Aug  4 12:49:13 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - docs/shutdown.txt: fix documentation bug

Wed Jul 30 03:18:34 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/libusb.c: add prototype for libusb_close() for Solaris (pointed out
   by John-Mark Gurney)

Sun Jul 13 15:18:23 UTC 2008 / Carlos Rodrigues <cefrodrigues@gmail.com>

 - drivers/megatec.c: don't parse replies with sscanf (better input handling)

Sun Jul 13 12:30:02 UTC 2008 / Carlos Rodrigues <cefrodrigues@gmail.com>

 - drivers/megatec.c: better handling of strange input

Thu Jul 10 12:22:54 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/apcsmart.[ch]: patch to recognize older APC Smart-UPS 1250
   (patch provided by Don Harvie)

Mon Jul  7 19:00:00 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - m4/nut_check_libhal.m4, drivers/main-hal.c: test for g_timeout_add_seconds
   availability (need Glib 2.14) (reported by Jordi Mallach, from Debian)

Fri Jul  4 14:15:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/apcsmart.c: print the firmware identifier for older Smart-UPS
   models, if it is successfully retrieved. (driver v1.99.9)

Fri Jul  4 12:04:55 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - clients/upsclient.c: fix a compilation error due to the missing include